<resources>
    <string name="app_name">每日心情</string>
    <string name="select_date">点击选择日期</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="description">您的心情或感想</string>
    <string name="select_picture">点击选择图片</string>
    <string name="save">保存</string>
    <string name="please_select_date">请选择日期</string>
    <string name="please_select_picture">请选择图片</string>
    <string name="save_success">保存成功！</string>
    <string name="welcome">欢迎使用 每日心情 APP~~</string>
    <string name="hint">您需同意该权限才能正常使用该APP~~</string>
    <string name="create_card">新建心情卡片</string>
    <string name="clear_all_cards">清空所有卡片</string>
    <string name="clear_success">清空成功！</string>
    <string name="is_override">已有数据，是否覆盖？</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="cancel_success">取消成功！</string>
    <string name="your_mood">您当天的心情</string>
    <string name="settings">设置</string>
    <string name="about">关于该应用</string>
    <string name="is_clear_all">是否确定清空？</string>
    <string name="empty_hint">空空如也，点击右下角添加心情卡片~~</string>
    <string name="app_about">一款用图片和只言片语记录每日心情的APP</string>
    <string name="version">当前版本：v 1.0</string>
    <string name="copyright">Copyright © 2018, WuchangI, All Rights Reserved.</string>
    <string name="github_address">项目地址：https://github.com/Yuziquan/DailyMood</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="delete_success">删除成功！</string>
    <string name="edit_card">编辑心情卡片</string>
    <string name="modify_success">修改成功！</string>
    <string name="item_hint">点击日期查看，点击选中卡片左滑可编辑/删除</string>
    <string name="existed_data">已有数据</string>
    <string name="on">开</string>
    <string name="off">关</string>
    <string name="bgm_volume">背景音乐音量</string>
    <string name="bgm_switch">背景音乐开关</string>
    <string name="min_volume">最小音量：</string>
    <string name="cur_volume">当前音量：</string>
    <string name="max_volume">最大音量：</string>
</resources>
