<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_select_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_btn"
            android:padding="10dp"
            android:text="@string/select_date"
            android:textColor="@android:color/white"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_year"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:gravity="center"
            android:text="xxxx"
            android:textColor="@android:color/holo_blue_light"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:gravity="center"
            android:text="@string/year"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_month"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="xx"
            android:textColor="@android:color/holo_green_light"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:gravity="center"
            android:text="@string/month"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/tv_day"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="xx"
            android:textColor="@android:color/holo_orange_light"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:gravity="center"
            android:text="@string/day"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/orange_btn"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/description"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="2"
            android:layout_marginLeft="20dp"
            android:textSize="17sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="7"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_select_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/green_btn"
            android:padding="10dp"
            android:text="@string/select_picture"
            android:textColor="@android:color/white"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/iv_picture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:background="@drawable/rectangle_purple_stroke"
            android:scaleType="centerCrop" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/red_btn"
        android:text="@string/save"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</LinearLayout>
